--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,22 @@
 <html>
   <head>
-    <title>KHU's blog</title>
+    <title>Django Girls blog</title>
   </head>
   <body>
-    <p>Hi there!</p>
-    <p>It works!</p>
+    <div>
+      <h1><a href="">Django Girls Blog</a></h1>
+    </div>
+
+    <div>
+      <p>published: 14.06.2014, 12:14</p>
+      <h2><a href="">My first post</a></h2>
+      <p>It works!</p>
+    </div>
+
+    <div>
+      <p>published: 14.06.2014, 12:14</p>
+      <h2><a href="">My second post</a></h2>
+      <p>It works!</p>
+    </div>
   </body>
 </html>
