--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,18 +6,11 @@
     <div class="page-header">
       <h1><a href="/">Django Girls blog</a></h1>
     </div>
-    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin, latin-ext"
-    rel="stylesheet" type="text/css">
-    <link rel="stylesheet"
-    href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-  </head>
   <body>
-    <div>
-      <h1><a href="/">Web Service programming<a/></h1>
-    </div>
-
     <div class="content container">
       <div class="row">
         <div class="col-md-8">
